# Triangles

./: CMakeLists.txt  Makefile  Readme.txt  geometry.cpp  geometry.h  geometry_base.cpp  intersection_finder.cpp  intersection_finder.h  main.cpp  rotator.cpp  rotator.h  triangle_test.cpp  triangle_test.h  vulkan_drawing.cpp  vulkan_drawing.h
Geometry/: CMakeLists.txt  geometry.cpp  geometry.h  geometry_base.cpp  intersection_finder.cpp  intersection_finder.h  rotator.cpp  rotator.h  triangles_generator.cpp  triangles_generator.h
input_examples/: 2.txt  6.txt  7.txt  8.txt  9.txt
shaders/: shader.vert  vert.spv
